<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/move"
                android:id="@+id/back"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="-60dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

<!--            <ImageView-->
<!--                android:id="@+id/Gold"-->
<!--                android:layout_width="237dp"-->
<!--                android:layout_height="246dp"-->
<!--                android:src="@drawable/goldumy"-->
<!--                android:visibility="invisible" />-->

            <EditText
                android:id="@+id/id_input"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#66ffffff"
                android:hint="ID"
                android:padding="5dip" />

            <EditText
                android:id="@+id/pwd_input"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#66ffffff"
                android:hint="PassWord"
                android:inputType="textPassword"
                android:padding="5dip"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selecter_image"
                android:minWidth="200dp"
                android:text="Login"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/login_button2"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selecter_image"
                android:minWidth="200dp"
                android:text="Sign up"
                android:layout_margin="5dp"/>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>