...
                    android:minWidth="250dp"
                    android:paddingHorizontal="50dp"
                    android:text="현재 위치 확인"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/safety"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bt1"
                    android:minWidth="250dp"
                    android:paddingHorizontal="50dp"
                    android:text="자전거 탑승 시 안전수칙"
                    android:textSize="15dp" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
...
